feat: add skills, education, and experience in cv

--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/letter-e.png">
+    <title>My CV</title>
+    <meta property="og:title" content="Edrick Calzar - Junior Frontend Developer">
+    <meta property="og:description" content="Junior Frontend Developer skilled in HTML, CSS, JavaScript, React, and Git. View my CV and contact details.">
+    <meta property="og:type" content="website">
 </head>
 <body>
-    
+    <header>
+        <h1>Edrick Calzar</h1>
+        <h4>Junior Frontend Developer</h4>
+        <p>Eufemia St.</br>Imus City, Cavite</br>(+63) 9325276012</br>ed_devv@gmail.com</p>
+    </header>
+
+    <section>
+        <h4>Skills</h4>
+        <p>HTML, CSS, JavaScript, React, Figma, Git, GitHub</p>
+    </section>
+
+    <section>
+        <h4>Education</h4>
+        <p><b>2023 to Present</b></p>
+        <p>Cavite State University Bacoor Campus - Bachelor of Science in Computer Science</p>
+
+    </section>
+
+    <section>
+        <h4>Experience</h4>
+        <p><b>Dream Company, Anywhere - Junior Frontend Developer</b></p>
+        </br>
+        <ul>
+            <li>Achievement #1</li>
+            <li>Achievement #2</li>
+            <li>Achievement #3</li>
+        </ul>
+        </br>
+        <p>Utilized web-designing skills by using Figma and specific programming languages. I've learned how to make development faster by utilizing AI assisted programming.</p>
+    </section>
+
+    <section>
+        <h4>Across the Internet</h4>
+        <a href="https://www.linkedin.com/in/edrick-calzar-522ab73ab/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/ed-devv" target="_blank">GitHub</a>
+    </section>
 </body>
 </html>
